🐞 Archive sidebar not showing. Temp Fix #18

--- a/archive/sidebar.css
+++ b/archive/sidebar.css
@@ -8,7 +8,7 @@
   height: calc(100% - 60px);
   position: relative;
   float: left;
-  overflow-y: auto;
+  overflow-y: show;
 }
 
 .select-year {
@@ -47,6 +47,7 @@ select.select-css {
   margin: 0;
   padding: 0;
   width: 100%;
+  background: inherit;
 }
 
 .sidebar a {
@@ -62,10 +63,7 @@ select.select-css {
   border-bottom: 1px solid #888;
 }
 
-.sidebar li.active {
-  /* background: white;
-    color: #222;*/
-  /*font-weight: 600;*/
+.sidebar .active li {
   background-color: #fff;
   color: #222;
 }
